# calendar-frontend

./: .bazelrc  .eslintrc  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  docker-compose.yml  jsconfig.json  lerna.json  package.json  postcss.config.js  stylelint.config.js  tailwind.config.js  vue.config.js
.husky/: pre-commit.sh
public/: index.html
src/: BAZEL.build  main.js
src/app/: app.component.html  index.vue
tools/: bazel_deps.bzl  bazel_docker_deps.bzl
